kubernetes/apps/dev/forgejo/runner/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-runner
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: forgejo-runner
  enableDefaultDeny:
    ingress: true
  egress:
    - # Forgejo server
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - protocol: TCP
              port: "3000"
    - # Forgejo (External URL)
      toFQDNs:
        - matchName: git.aresu.eu
    - # Forgejo runner controller
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo-runner
      toPorts:
        - ports:
            - protocol: TCP
              port: "38809"
    - # LiteLLM
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: litellm
            k8s:io.kubernetes.pod.namespace: ai
      toPorts:
        - ports:
            - protocol: TCP
              port: "4000"
    - # Konflate
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: konflate
            k8s:io.kubernetes.pod.namespace: flux-system
      toPorts:
        - ports:
            - protocol: TCP
              port: "8080"
    - # Hairpinned in-cluster external services
      toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-external
    - # Internet egress
      toCIDRSet:
        # Internet egress
        - cidrGroupRef: internet
      toPorts:
        - ports:
            - protocol: TCP
              port: "80"
            - protocol: TCP
              port: "443"
